[project]
name = "emek"
version = "1.0.1"
license = {file = "LICENSE"}
authors = [
  { name="bakircius", email="burakbakirci@gmail.com" },
]
description = "Making Tag Analysis from Stack Overflow Questions Dataframe"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "sosq"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[project.urls]
Source = "https://github.com/bakircius/emek"
Issues = "https://github.com/bakircius/emek/issues"
Repository = "https://github.com/bakircius/emek.git"
[tool.pytest.ini_options]
pythonpath = "src"